# basic_sfml

./: CMakeLists.txt
include/: character.h  game_engine.h  game_object.h
src/: character.cpp  game_engine.cpp  main.cpp
